Fix layout bug

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -11,7 +11,7 @@ body {
   background: $dark-bg-color;
   margin: 2rem;
   overflow: auto;
-  // border: 1px solid #fff;
+  border: 1px solid #fff;
 
   &::-webkit-scrollbar {
     width: 0;
@@ -165,6 +165,7 @@ ul {
   &.light {
     background: $light-bg-color;
     color: $light-special-color;
+    border: 1px solid $special-orange;
 
     a {
       color: $special-orange;
@@ -176,7 +177,7 @@ ul {
     }
 
     .Layout {
-      border: 1px solid $special-orange;
+      // border: 1px solid $special-orange;
     }
 
     .About {
